# bookstore

./: pyproject.toml
bookstore/: settings.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializers.py
order/test/: test_order_serializer.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializer.py
product/tests/: test_category_serializer.py  test_product_serializers.py
